# upy

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  detective.py  id.py  mappable.py  pprint.py  time_parsing.py  timeit.py  version.py
src/plot/: __init__.py  mollweide.py
